--- a/styles/shows.css
+++ b/styles/shows.css
@@ -128,6 +128,10 @@ body {
 .hero__title {
   font-size: 2.5rem;
   width: 100%;
+  margin-left: 1rem;
+}
+.hero__title-top {
+  margin-bottom: 5rem;
 }
 @media screen and (min-width: 768px) {
   .hero__title {
