--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -95,6 +95,11 @@
   &__title {
     font-size: 2.5rem;
     width: 100%;
+    margin-left: 1rem;
+
+    &-top {
+      margin-bottom: 5rem;
+    }
 
     @include tablet-and-desktop {
       @include DesktabHeader;
