fix pagaes and styles

--- a/gui-tavares-client/src/components/Header/Header.scss
+++ b/gui-tavares-client/src/components/Header/Header.scss
@@ -35,8 +35,7 @@
     &-list {
       display: flex;
       list-style: none;
-      margin: 0;
-      padding: 0;
+      margin-right: 2.5rem;
 
       @include mobile {
         display: none;
