--- a/gui-tavares-client/src/components/Hero/Hero.scss
+++ b/gui-tavares-client/src/components/Hero/Hero.scss
@@ -6,7 +6,7 @@
   justify-content: flex-start;
   align-items: center;
   text-align: left;
-  padding-left: 40px;
+  padding-left: 2.5rem;
   color: white;
   font-size: 1rem;
   font-weight: 500;
@@ -23,6 +23,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+
     background: linear-gradient(
       to right,
       rgba(0, 0, 0, 1.5),
@@ -36,7 +37,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    margin-top: 1rem;
+    margin: 1rem 1rem;
     position: relative;
     z-index: 2;
   }
@@ -54,6 +55,18 @@
     &:hover {
       background: white;
       color: #535bf2;
+    }
+  }
+  &__player {
+    margin-top: 1rem;
+    max-width: 400px;
+    width: 100%;
+    position: relative;
+    z-index: 2;
+
+    iframe {
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     }
   }
 }
