--- a/gui-tavares-client/src/pages/Classes/Classes.scss
+++ b/gui-tavares-client/src/pages/Classes/Classes.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   padding: 3rem 1rem;
-  background-color: #f9f9f9; // Light background for content
+  background-color: #f9f9f9;
 
   &__content {
     max-width: 800px;
@@ -47,19 +47,7 @@
     }
 
     .classes__btn {
-      display: inline-block;
-      padding: 0.75rem 1.5rem;
-      font-size: 1.2rem;
-      font-weight: bold;
-      text-decoration: none;
-      color: white;
-      background-color: #535bf2;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-
-      &:hover {
-        background-color: #4342c1;
-      }
+      @include purple-button;
     }
   }
 }
