--- a/gui-tavares-client/src/styles/_partials/_mixins.scss
+++ b/gui-tavares-client/src/styles/_partials/_mixins.scss
@@ -25,6 +25,12 @@
     @content;
   }
 }
+@mixin desktopL {
+  @media (min-width: 1440px) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media (min-width: 768px) {
     @content;
@@ -58,4 +64,20 @@
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+}
+
+@mixin purple-button {
+  display: inline-block;
+  padding: 0.75rem 1.5rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+  background-color: #535bf2;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: #4342c1;
+  }
 }
