--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,24 +1,134 @@
+@use "../../styles/_partials/global.scss" as *;
+
 .footer {
-  display: flex;
-  max-width: 100%;
-  align-items: center;
+  background-color: #1a1a1a;
+  padding: 1.5rem 0;
+
+  @include tablet {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+  }
+
+  @include desktop {
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem;
+  }
 
   &__nav {
-    display: flex;
-    flex-direction: row;
+    @include flex-column;
     align-items: center;
+    gap: 1.5rem;
+    width: 100%;
     padding: 1rem;
     color: white;
     font-size: 0.8rem;
-    font-weight: bold;
+
+    @include tablet {
+      width: 50%;
+      align-items: flex-start;
+      margin-left: 2rem;
+    }
+
+    @include desktop {
+      width: auto;
+      align-items: flex-start;
+      margin-left: 0;
+      padding: 1rem 0rem;
+    }
+  }
+
+  &__title {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 500;
     text-align: center;
     margin: 0;
-    padding: 0;
+
+    @include desktop {
+      text-align: left;
+    }
+  }
+
+  &__head-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+    width: 100%;
+
+    @include tablet {
+      width: 40%;
+      align-items: flex-start;
+    }
+
+    @include desktop {
+      width: auto;
+      flex-wrap: nowrap;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .footer__icon {
+      width: 2rem;
+      height: 2rem;
+      transition: transform 0.2s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
   }
 
   &__info {
+    text-align: center;
+    color: white;
+    margin-left: 1rem;
+
+    @include tablet {
+      text-align: left;
+      margin-left: 2rem;
+    }
+
+    @include desktop {
+      text-align: right;
+    }
+
     &-wrap {
-      display: none;
+      @include tablet {
+        margin: 2rem 4rem 0 0;
+      }
+      @include desktop {
+        margin-top: 0;
+      }
+    }
+
+    &-subtitle {
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+
+    &-content {
+      font-size: 0.9rem;
+
+      @include desktop {
+        display: none;
+      }
+    }
+
+    &-email {
+      color: white;
+      text-decoration: underline;
+      font-size: 0.9rem;
+
+      &:hover {
+        text-decoration: none;
+      }
     }
   }
 }
