--- a/client/src/components/Hero/Hero.scss
+++ b/client/src/components/Hero/Hero.scss
@@ -37,7 +37,6 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    margin: 4rem 0rem 0rem 1rem;
     position: relative;
     z-index: 2;
   }
@@ -55,6 +54,7 @@
     width: 100%;
     position: relative;
     z-index: 2;
+    padding: 0 1rem 0 0;
 
     iframe {
       border-radius: 8px;
