--- a/client/src/pages/Bookings/Bookings.scss
+++ b/client/src/pages/Bookings/Bookings.scss
@@ -1,50 +1,53 @@
 @use "../../styles/_partials/global.scss" as *;
 
 .bookings {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include flex-center;
+  @include flex-column;
   height: 100vh;
   padding: 1rem;
   text-align: center;
   background-color: #181818;
   color: #ffffff;
-  margin-top: 6rem;
+  margin-top: 12rem;
 
   @include tablet {
-    margin-top: 8rem;
+    margin-top: 6rem;
+    padding: 2rem;
   }
 
   @include desktop {
-    padding: 20px 10rem;
+    margin-top: 6rem;
+    padding: 3rem 5rem;
   }
 
   @include desktopL {
-    margin-top: 7rem;
-    padding: 20px 15rem;
+    padding: 3rem 5rem;
   }
 
-  &__title {
-    margin-bottom: 1rem;
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
+  &__calendar {
+    margin-top: 2rem;
+    width: 100%;
+    max-width: 1200px;
+    flex-grow: 1;
 
-  &__subtitle {
-    margin-bottom: 2rem;
-    font-size: 1.2rem;
-    color: #cccccc;
-  }
+    iframe {
+      width: 100%;
+      height: 80vh;
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
-  &__btn {
-    @include button;
-    animation: pop 3s ease-in;
-    margin: 1rem 0 2rem 0rem;
-    max-width: 50%;
-  }
-  &__slots {
-    @include flex-column;
-    gap: 0.5rem;
+      @include tablet {
+        height: 70vh;
+      }
+
+      @include desktop {
+        height: 75vh;
+      }
+
+      @include desktopL {
+        height: 80vh;
+      }
+    }
   }
 }
