--- a/client/src/pages/Classes/Classes.scss
+++ b/client/src/pages/Classes/Classes.scss
@@ -1,15 +1,13 @@
 @use "../../styles/_partials/global.scss" as *;
 
 .classes {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex-center;
   padding: 3rem 1rem;
   background-color: #f9f9f9;
-  margin-top: 11rem;
+  margin-top: 12rem;
 
   @include tablet {
-    margin-top: 7rem;
+    margin-top: 6rem;
   }
 
   @include desktop {
@@ -18,7 +16,7 @@
   }
 
   @include desktopL {
-    margin-top: 7rem;
+    margin-top: 6rem;
     padding: 20px 15rem;
   }
 
@@ -46,14 +44,22 @@
 
       .classes__item {
         font-size: 1.1rem;
-        margin-bottom: 1rem;
-        text-align: left;
+        margin-bottom: 1.5rem;
+        text-align: center;
         &:hover {
           animation: pop 1s ease-in-out;
         }
 
         strong {
           color: #535bf2;
+        }
+
+        @include tablet {
+          padding: 0rem 5rem;
+        }
+
+        @include desktop {
+          padding: 0rem 3rem;
         }
       }
     }
