--- a/client/src/pages/PhotoPage/PhotoPage.scss
+++ b/client/src/pages/PhotoPage/PhotoPage.scss
@@ -20,8 +20,8 @@
   }
 
   &__image {
-    width: 100%;
-    height: auto;
+    width: 60%;
+    height: 60vh;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
