--- a/client/src/pages/Shows/Shows.scss
+++ b/client/src/pages/Shows/Shows.scss
@@ -10,12 +10,8 @@
     margin-top: 8rem;
   }
 
-  @include desktop {
-    padding: 20px 10rem;
-  }
-
   @include desktopL {
-    margin-top: 7rem;
+    margin-top: 6rem;
     padding: 20px 15rem;
   }
 
@@ -41,6 +37,10 @@
 
     .shows__view-btn,
     .shows__book-btn {
+      @include mobile {
+        display: none;
+      }
+
       @include purple-button;
       &:hover {
         animation: pop 2s ease-in-out;
@@ -53,32 +53,48 @@
     gap: 1.5rem;
 
     &--grid {
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-auto-rows: 250px;
 
-    &--list {
-      display: block;
+      &--list {
+        display: block;
 
-      .shows__photo {
-        margin: 0 auto 1.5rem auto;
-        max-width: 600px;
+        .shows__photo {
+          margin: 0 auto 1.5rem auto;
+          max-width: 600px;
+          height: 300px;
+        }
       }
     }
   }
 
   &__photo {
     overflow: hidden;
-    border-radius: 8px;
+    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     img {
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: cover;
       display: block;
       transition: transform 0.3s ease;
 
       &:hover {
         transform: scale(1.05);
       }
+    }
+  }
+  &__btn-book {
+    margin: 2rem 0;
+    @include purple-button;
+    color: white;
+    &:hover {
+      animation: pop 2s ease-in-out;
     }
   }
 }
