--- a/client/src/styles/_partials/_mixins.scss
+++ b/client/src/styles/_partials/_mixins.scss
@@ -1,7 +1,6 @@
 @use "./variables" as *;
 
 // Mixin for flexbox
-
 @mixin flex-center {
   display: flex;
   justify-content: center;
@@ -58,7 +57,7 @@
     width: 100%;
     height: 100%;
     border-radius: inherit;
-    border: 1px solid #535bf2;
+    border: 1.3px solid #535bf2;
     box-shadow: 0 0 5px #535bf2;
     animation: border-glow 8s infinite linear;
     pointer-events: none;
@@ -73,7 +72,7 @@
       height: 0.825rem;
       background-color: #535bf2;
       border-radius: 50%;
-      box-shadow: 0 0 10px #535bf2;
+      box-shadow: 0 0 5px #535bf2;
       animation: rotate-point 8s infinite linear;
     }
   }
@@ -108,5 +107,13 @@
 
   &:hover {
     background-color: #4342c1;
+  }
+}
+
+@mixin grayscale-hover($transition-time: 0.5s) {
+  filter: grayscale(100%);
+  transition: filter $transition-time ease-in;
+  &:hover {
+    filter: grayscale(0%);
   }
 }
