--- a/client/src/components/Comments/Comments.scss
+++ b/client/src/components/Comments/Comments.scss
@@ -6,10 +6,11 @@
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
   border: 1px solid #e0e0e0;
   width: 100%;
+  height: auto;
 
   &__title {
-    font-size: 2rem;
-    margin-bottom: 1.5rem;
+    font-size: 1.5rem;
+    margin: 1.5rem;
     color: #333;
     text-align: center;
   }
@@ -17,9 +18,16 @@
   &__form {
     display: flex;
     align-items: flex-start;
-    gap: 1rem;
+    gap: 0.5rem;
     flex-wrap: wrap;
-    margin: 1.5rem 15rem;
+    padding: 2rem 0.5rem;
+
+    @include tablet {
+      padding: 2rem 5rem;
+    }
+    @include desktop {
+      margin: 1.5rem 20rem;
+    }
   }
 
   &__img {
@@ -27,6 +35,7 @@
     height: 60px;
     border-radius: 50%;
     object-fit: cover;
+    margin-top: 1rem;
   }
 
   &__box {
@@ -34,7 +43,6 @@
     flex-direction: column;
     flex: 1;
     gap: 1rem;
-    padding: 0.5rem 2rem;
   }
 
   &__label {
@@ -74,24 +82,46 @@
   }
 
   &__btn {
-    align-self: flex-start;
-    background-color: #535bf2;
-    color: white;
-    border: none;
-    padding: 0.8rem 1.8rem;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.2s ease-in-out;
-
-    &:hover {
-      background-color: #4348d0;
-    }
+    @include purple-button;
+    max-width: 65%;
+    align-self: flex-end;
   }
 
-  .comments-list {
-    margin-top: 2rem;
+  &__list {
     border-top: 1px solid #ddd;
-    padding-top: 1.5rem;
+    padding: 1rem 1rem;
+  }
+
+  &__item {
+    border-bottom: 1px solid #ddd;
+    font-size: 1rem;
+    color: #333;
+    transition: transform 0.2s ease-in-out;
+
+    &-wrap {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 0.3rem;
+    }
+
+    &-header {
+      display: flex;
+
+      color: #333;
+    }
+    &-name {
+      color: #333;
+    }
+    &-text {
+      color: #555;
+      padding: 1rem 0;
+    }
+
+    &-comment {
+      color: #333;
+    }
+    &:hover {
+      transform: scale(1.02);
+    }
   }
 }
