--- a/client/src/components/Hero/Hero.scss
+++ b/client/src/components/Hero/Hero.scss
@@ -16,6 +16,14 @@
   background-image: url("../../assets/Images/Hero.jpg");
   position: relative;
 
+  @include tablet {
+    background-image: none;
+  }
+
+  @include mobile {
+    background-image: none;
+  }
+
   &::before {
     content: "";
     position: absolute;
@@ -23,7 +31,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-
     background: linear-gradient(
       to right,
       rgba(0, 0, 0, 1.5),
@@ -31,6 +38,36 @@
       transparent
     );
     z-index: 1;
+  }
+
+  &__media {
+    display: none;
+
+    @include tablet {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+
+    @include mobile {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+  }
+
+  &__video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   &__content {
@@ -48,6 +85,7 @@
       animation: pop 3s ease-in-out;
     }
   }
+
   &__player {
     margin-top: 1rem;
     max-width: 400px;
