--- a/client/src/components/Records/Records.scss
+++ b/client/src/components/Records/Records.scss
@@ -9,7 +9,6 @@
   width: 100%;
   max-width: 1200px;
 
-  // Mobile e Tablet: Swiper para carrossel
   &__mobile-tablet {
     display: block;
     width: 100%;
@@ -25,18 +24,13 @@
       justify-content: center;
       align-items: center;
     }
-
-    @include desktop {
-      display: none;
-    }
   }
 
-  // Desktop: Fileira fixa
   &__desktop {
     display: none;
 
     @include desktop {
-      @include flex-column;
+      @include flex-row;
       gap: 1.5rem;
       background: #fff;
       border-radius: 8px;
@@ -46,24 +40,16 @@
   }
 
   &__square {
-    width: 250px;
-    height: 250px;
+    width: 90%;
     background: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex-center;
 
     @include tablet {
-      width: 200px;
-      height: 200px;
-    }
-
-    @include desktop {
-      width: 220px;
-      height: 220px;
+      width: 20rem;
+      height: 20rem;
     }
   }
 
