--- a/client/src/pages/Bookings/Bookings.scss
+++ b/client/src/pages/Bookings/Bookings.scss
@@ -3,20 +3,17 @@
 .bookings {
   @include flex-center;
   @include flex-column;
-  height: 100vh;
+  height: 90vh;
   padding: 1rem;
-  text-align: center;
-  background-color: #181818;
-  color: #ffffff;
   margin-top: 12rem;
 
   @include tablet {
-    margin-top: 6rem;
+    margin-top: 10rem;
     padding: 2rem;
   }
 
   @include desktop {
-    margin-top: 6rem;
+    margin-top: 8rem;
     padding: 3rem 5rem;
   }
 
@@ -32,18 +29,10 @@
 
     iframe {
       width: 100%;
-      height: 80vh;
+      height: 70vh;
       border: none;
-      border-radius: 8px;
+      border-radius: 1rem;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
-      @include tablet {
-        height: 70vh;
-      }
-
-      @include desktop {
-        height: 75vh;
-      }
 
       @include desktopL {
         height: 80vh;
