--- a/client/src/pages/ContactMe/ContactMe.scss
+++ b/client/src/pages/ContactMe/ContactMe.scss
@@ -1,13 +1,11 @@
 @use "../../styles/_partials/global.scss" as *;
 
 .contact {
+  @include flex-center;
+  background-color: white;
   margin-top: 12rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1rem 0rem;
-  background-color: #f9f9f9;
-  margin-top: 12rem;
+
+  @include flex-column;
 
   @include tablet {
     margin-top: 10rem;
@@ -15,57 +13,33 @@
 
   @include desktop {
     margin-top: 8rem;
+    @include flex-row;
   }
 
   @include desktopL {
     margin-top: 6rem;
-    padding: 20px 15rem;
-  }
-
-  &__title {
-    font-size: 1.2rem;
-    font-weight: bold;
-    margin-bottom: 1.5rem;
-    text-align: center;
-    color: #333;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-      sans-serif;
-
-    @include desktop {
-      font-size: 2rem;
-    }
-  }
-
-  &__success {
-    font-size: 1rem;
-    color: #28a745;
-    margin: 2rem;
-    text-align: center;
-    animation: fadeIn 0.5s ease-in-out;
+    padding: 20px 10rem;
   }
 
   &__form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 90%;
-    max-width: 600px;
-    background-color: #fff;
-    padding: 1.5rem;
+    @include flex-column;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     gap: 1rem;
+    padding: 2rem 0.5rem;
+    margin-top: 4rem;
+    z-index: 1;
+    width: 80%;
 
     @include tablet {
+      margin-top: 4rem;
       width: 80%;
     }
 
     @include desktop {
       width: 60%;
-      flex-direction: row;
-      align-items: flex-start;
-      padding: 2rem;
+      margin-top: 4rem;
+      padding: 2rem 5rem;
     }
   }
 
@@ -74,23 +48,22 @@
     height: 4rem;
     border-radius: 50%;
     margin-bottom: 1rem;
-
+    align-self: center;
     @include desktop {
-      margin-right: 1.5rem;
+      align-self: flex-start;
     }
   }
 
   &__box {
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    @include flex-column;
     gap: 1rem;
   }
 
   &__label {
     font-size: 0.9rem;
     font-weight: bold;
-    margin-bottom: 0.3rem;
+
     color: #333;
   }
 
@@ -110,35 +83,55 @@
   &__btn {
     @include purple-button;
     align-self: center;
+    margin-top: 0.5rem;
 
     @include desktop {
-      align-self: flex-start;
+      align-self: flex-end;
     }
   }
 
-  @include tablet {
-    align-items: flex-start;
+  &__success {
+    font-size: 1rem;
+    color: #28a745;
+    margin: 2rem;
+    text-align: center;
+  }
 
-    &__form {
-      align-items: flex-start;
+  &__error {
+    font-size: 1rem;
+    color: #dc3545;
+    margin: 2rem;
+    text-align: center;
+  }
+
+  &__animation {
+    width: 100%;
+    height: 20rem;
+    margin: 2rem 0;
+
+    border: none;
+    background: transparent;
+    pointer-events: none;
+
+    @include desktop {
+      width: 40%;
+      align-self: baseline;
+      position: absolute;
+      right: 0;
+      top: 5rem;
+      transform: rotate(345deg);
+    }
+
+    @include desktopL {
+      width: 40%;
     }
   }
 
-  @include desktop {
-    justify-content: center;
-    align-items: center;
-
-    &__form {
-      align-items: flex-start;
-    }
-  }
-
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  &__iframe {
+    width: 100%;
+    height: 20rem;
+    border: none;
+    background: transparent;
+    pointer-events: none;
   }
 }
