--- a/client/src/pages/Shows/Shows.scss
+++ b/client/src/pages/Shows/Shows.scss
@@ -1,8 +1,7 @@
 @use "../../styles/_partials/global.scss" as *;
 
 .shows {
-  padding: 3rem 1rem;
-  background-color: #f9f9f9;
+  background-color: white;
   text-align: center;
   margin-top: 12rem;
 
@@ -10,61 +9,63 @@
     margin-top: 8rem;
   }
 
+  @include desktop {
+    padding: 20px 5rem;
+  }
+
   @include desktopL {
     margin-top: 6rem;
-    padding: 20px 15rem;
+    padding: 20px 10rem;
   }
 
   &__title {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
+    font-size: 2rem;
+    margin: 1.5rem;
     font-weight: bold;
     color: #333;
+
+    @include desktop {
+      font-size: 2.5rem;
+    }
   }
 
   &__description {
     font-size: 1.2rem;
     color: #555;
     margin-bottom: 2rem;
+    @include desktop {
+      font-size: 1.5rem;
+    }
   }
 
-  &__view-toggle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 2rem;
-
-    .shows__view-btn,
-    .shows__book-btn {
-      @include mobile {
-        display: none;
-      }
-
-      @include purple-button;
-      &:hover {
-        animation: pop 2s ease-in-out;
-      }
+  &__content {
+    padding: 2rem 0;
+    @include desktop {
+      padding: 0;
     }
   }
 
   &__gallery {
-    display: grid;
+    @include flex-column;
+    @include flex-center;
     gap: 1.5rem;
 
-    &--grid {
+    @include mobile {
+      padding: 0 1rem;
+    }
+
+    @include tablet {
+      padding: 0 2rem;
+    }
+
+    @include desktop {
+      display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       grid-auto-rows: 250px;
+    }
 
-      &--list {
-        display: block;
-
-        .shows__photo {
-          margin: 0 auto 1.5rem auto;
-          max-width: 600px;
-          height: 300px;
-        }
-      }
+    @include desktopL {
+      grid-template-columns: repeat(4, 1fr);
     }
   }
 
@@ -72,10 +73,8 @@
     overflow: hidden;
     border-radius: 12px;
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    aspect-ratio: 16 / 9;
+    @include flex-center;
 
     img {
       width: 100%;
@@ -88,11 +87,22 @@
         transform: scale(1.05);
       }
     }
+    @include tablet {
+      width: 70%;
+      height: 70%;
+      @include flex-center;
+    }
+    @include desktop {
+      width: 90%;
+      height: 90%;
+    }
   }
+
   &__btn-book {
     margin: 2rem 0;
     @include purple-button;
     color: white;
+
     &:hover {
       animation: pop 2s ease-in-out;
     }
