--- a/client/src/styles/_partials/_mixins.scss
+++ b/client/src/styles/_partials/_mixins.scss
@@ -12,6 +12,11 @@
   flex-direction: column;
 }
 
+@mixin flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
 // Mixin for responsive design
 @mixin mobile {
   @media (max-width: 767px) {
