--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -45,8 +45,9 @@
     color: white;
     font-size: 1.5rem;
     font-weight: 500;
-    text-align: center;
     margin: 0;
+    align-items: center;
+    padding-left: 1rem;
 
     @include desktop {
       text-align: left;
@@ -86,7 +87,8 @@
   }
 
   &__info {
-    text-align: center;
+    @include flex-column;
+    align-items: center;
     color: white;
     margin-left: 1rem;
 
