--- a/src/pages/Classes/Classes.scss
+++ b/src/pages/Classes/Classes.scss
@@ -43,7 +43,7 @@
 
   &__list {
     list-style: none;
-    padding: 0;
+    padding: 0 0.5rem;
     margin-bottom: 2rem;
   }
 
@@ -70,13 +70,13 @@
 
   &__cta-text {
     font-size: 1.2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     color: #555;
   }
 
   &__btn {
     @include purple-button;
-    margin: 1rem;
+    margin: 2rem;
     &:hover {
       animation: pop 2s ease-in-out;
     }
