--- a/src/pages/Shows/Shows.scss
+++ b/src/pages/Shows/Shows.scss
@@ -32,6 +32,7 @@
   &__description {
     font-size: 1.2rem;
     color: #555;
+    padding: 0 0.5rem;
     margin-bottom: 2rem;
     @include desktop {
       font-size: 1.5rem;
