fix some issues

--- a/src/pages/Classes/Classes.scss
+++ b/src/pages/Classes/Classes.scss
@@ -3,10 +3,10 @@
 .classes {
   @include flex-center;
   background-color: white;
-  margin-top: 8rem;
+  margin: 4rem 0;
 
   @include tablet {
-    margin-top: 6rem;
+    margin: 4rem 0;
   }
 
   @include desktop {
