--- a/src/pages/ContactMe/ContactMe.scss
+++ b/src/pages/ContactMe/ContactMe.scss
@@ -3,7 +3,7 @@
 .contact {
   @include flex-center;
   background-color: white;
-  margin-top: 8rem;
+  margin: 4rem 0;
 
   @include flex-column;
 
