--- a/src/pages/Shows/Shows.scss
+++ b/src/pages/Shows/Shows.scss
@@ -3,7 +3,7 @@
 .shows {
   background-color: white;
   text-align: center;
-  margin-top: 8rem;
+  margin: 4rem 0;
 
   @include tablet {
     margin-top: 8rem;
