--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -2,7 +2,7 @@
 
 .about {
   &__wrap {
-    margin-top: 8rem;
+    margin: 4rem 0;
     min-height: 100vh;
     @include flex-column;
     align-items: center;
